<resources>
    <string name="app_name">My Application</string>
    <string name="team_1">TeamA</string>
    <string name="hello_count_1">0</string>
    <string name="btn_reset">请空</string>
    <string name="btn_add_1">+ 1 分</string>
    <string name="btn_add_2">+ 2 分</string>
    <string name="btn_add_3">+ 3 分</string>
    <string name="team_2">TeamB</string>
    <string name="hello_count_2">0</string>
    <string name="btn_add_4">+ 1 分</string>
    <string name="btn_add_5">+ 2 分</string>
    <string name="btn_add_6">+ 3 分</string>

    <string name="title2">Hello</string>
    <string name="input2">Input RMB</string>
    <string name="btn2_1">DOLLAR</string>
    <string name="btn2_2">EURO</string>
    <string name="btn2_3">WON</string>
</resources>